kortana-mainnet/build_error.txt
cargo :     Checking kortana-mainnet v1.0.0 (
C:\Users\emi\Desktop\blockchains\kortanablock
chain-devhub\kortana-mainnet)
At line:1 char:1
+ cargo check 2>&1 | Out-File -FilePath 
build_error.txt -Encoding utf8
+ ~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified:  
   (    Checking ko...ortana-mainnet):Strin  
  g) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandE 
   rror
 
warning: unused variable: `value`
   --> src\rpc\mod.rs:650:50
    |
650 | ...                   let (from, to, 
value, gas_price) = if let Some(t) = &tx {
    |                                      
^^^^^ help: if this is intentional, prefix 
it with an underscore: `_value`
    |
    = note: `#[warn(unused_variables)]` 
(part of `#[warn(unused)]`) on by default

warning: unused variable: `topics`
   --> src\rpc\mod.rs:752:61
    |
752 | ...                   FilterType::Logs 
{ address, topics, .. } => {
    |                                        
           ^^^^^^-
    |                                        
           |
    |                                        
           help: try removing the field

error[E0308]: mismatched types
   --> src\vm\evm.rs:559:43
    |
559 | ...                   return Ok(()); 
// Continue PC loop
    |                              -- ^^ 
expected `Vec<u8>`, found `()`
    |                              |
    |                              arguments 
to this enum variant are incorrect
    |
    = note: expected struct `Vec<u8>`
            found unit type `()`
help: the type constructed contains `()` due 
to the type of the argument passed
   --> src\vm\evm.rs:559:40
    |
559 | ...                   return Ok(()); 
// Continue PC loop
    |                              ^^^--^
    |                                 |
    |                                 this 
argument influences the type of `Ok`
note: tuple variant defined here
   --> /rustc/ed61e7d7e242494fb7057f2657300d9
e77bb4fcb\library\core\src\result.rs:554:5

warning: unused variable: `res`
   --> src\vm\evm.rs:851:17
    |
851 |         let mut res = [0u8; 32];
    |                 ^^^ help: if this is 
intentional, prefix it with an underscore: 
`_res`

warning: unused variable: `temp`
   --> src\vm\evm.rs:852:17
    |
852 |         let mut temp = [0u32; 16]; // 
16-bit chunks for multiplication
    |                 ^^^^ help: if this is 
intentional, prefix it with an underscore: 
`_temp`

warning: unused variable: `carry`
   --> src\vm\evm.rs:863:21
    |
863 |             let mut carry = 0u32;
    |                     ^^^^^
    |
help: if this is intentional, prefix it with 
an underscore
    |
863 |             let mut _carry = 0u32;
    |                     +
help: you might have meant to pattern match 
on the similarly named constant `BRANCHES`
    |
863 -             let mut carry = 0u32;
863 +             let mut network::p2p::Korta
naNetwork::run::{closure#0}::BRANCHES = 0u32;
    |

warning: unused variable: `result`
   --> src\vm\evm.rs:874:17
    |
874 |         let mut result = [0u64; 4];
    |                 ^^^^^^ help: if this 
is intentional, prefix it with an 
underscore: `_result`

warning: variable does not need to be mutable
   --> src\vm\evm.rs:851:13
    |
851 |         let mut res = [0u8; 32];
    |             ----^^^
    |             |
    |             help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of 
`#[warn(unused)]`) on by default

warning: variable does not need to be mutable
   --> src\vm\evm.rs:852:13
    |
852 |         let mut temp = [0u32; 16]; // 
16-bit chunks for multiplication
    |             ----^^^^
    |             |
    |             help: remove this `mut`

warning: variable does not need to be mutable
   --> src\vm\evm.rs:863:17
    |
863 |             let mut carry = 0u32;
    |                 ----^^^^^
    |                 |
    |                 help: remove this `mut`

warning: variable does not need to be mutable
   --> src\vm\evm.rs:874:13
    |
874 |         let mut result = [0u64; 4];
    |             ----^^^^^^
    |             |
    |             help: remove this `mut`

For more information about this error, try 
`rustc --explain E0308`.
warning: `kortana-mainnet` (lib) generated 
10 warnings
error: could not compile `kortana-mainnet` 
(lib) due to 1 previous error; 10 warnings 
emitted
